email account setup

--- a/src/com/project/view/MainWindow.fxml
+++ b/src/com/project/view/MainWindow.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane prefHeight="462.0" prefWidth="672.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="672.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0">
+      <MenuBar layoutY="1.0" prefHeight="43.0" prefWidth="671.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
@@ -32,8 +32,8 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TreeView fx:id="emailsTreeView" layoutY="26.0" prefHeight="437.0" prefWidth="145.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="26.0" />
-      <TableView fx:id="emailsTableView" layoutX="145.0" layoutY="26.0" prefHeight="143.0" prefWidth="528.0" AnchorPane.leftAnchor="145.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="26.0">
+      <TreeView fx:id="emailsTreeView" layoutY="43.0" prefHeight="418.0" prefWidth="145.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="43.0" />
+      <TableView fx:id="emailsTableView" layoutX="145.0" layoutY="43.0" prefHeight="133.0" prefWidth="527.0" AnchorPane.leftAnchor="145.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="43.0">
         <columns>
           <TableColumn prefWidth="75.0" text="Sender" />
           <TableColumn prefWidth="147.99998474121094" text="Subject" />
@@ -42,6 +42,6 @@
             <TableColumn prefWidth="84.66668701171875" text="Date" />
         </columns>
       </TableView>
-      <WebView fx:id="emailWebView" layoutX="145.0" layoutY="169.0" prefHeight="291.0" prefWidth="528.0" AnchorPane.bottomAnchor="1.666656494140625" AnchorPane.leftAnchor="144.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="169.00001017252606" />
+      <WebView fx:id="emailWebView" layoutX="145.0" layoutY="174.0" prefHeight="286.0" prefWidth="528.0" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="144.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="174.0" />
    </children>
 </AnchorPane>
