--- a/src/com/project/view/ComposeMessageWindow.fxml
+++ b/src/com/project/view/ComposeMessageWindow.fxml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.web.HTMLEditor?>
 
-
-<AnchorPane prefHeight="459.0" prefWidth="636.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="486.0" prefWidth="636.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="20.0" layoutY="24.0" prefHeight="27.0" prefWidth="55.0" text="Recipient:" />
-      <Label layoutX="20.0" layoutY="64.0" prefHeight="27.0" prefWidth="55.0" text="Subject:" />
-      <TextField fx:id="recipientTextField" layoutX="79.0" layoutY="25.0" prefHeight="25.0" prefWidth="541.0" />
-      <TextField fx:id="subjectTextField" layoutX="79.0" layoutY="65.0" prefHeight="25.0" prefWidth="541.0" />
-      <HTMLEditor fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="12.0" layoutY="107.0" prefHeight="299.0" prefWidth="609.0" />
-      <Button layoutX="532.0" layoutY="414.0" mnemonicParsing="false" onAction="#sendButtonAction" prefHeight="27.0" prefWidth="87.0" text="Send" />
-      <Label fx:id="errorLabel" layoutX="14.0" layoutY="410.0" prefHeight="17.0" prefWidth="503.0" />
+      <Label layoutX="20.0" layoutY="63.0" prefHeight="27.0" prefWidth="55.0" text="Recipient:" />
+      <Label layoutX="20.0" layoutY="103.0" prefHeight="27.0" prefWidth="55.0" text="Subject:" />
+      <TextField fx:id="recipientTextField" layoutX="80.0" layoutY="64.0" prefHeight="25.0" prefWidth="541.0" />
+      <TextField fx:id="subjectTextField" layoutX="80.0" layoutY="104.0" prefHeight="25.0" prefWidth="541.0" />
+      <HTMLEditor fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="13.0" layoutY="146.0" prefHeight="299.0" prefWidth="609.0" />
+      <Button layoutX="533.0" layoutY="453.0" mnemonicParsing="false" onAction="#sendButtonAction" prefHeight="27.0" prefWidth="87.0" text="Send" />
+      <Label fx:id="errorLabel" layoutX="15.0" layoutY="449.0" prefHeight="17.0" prefWidth="503.0" />
+      <Label layoutX="20.0" layoutY="25.0" prefHeight="27.0" prefWidth="55.0" text="Account:" />
+      <ChoiceBox fx:id="emailAccountChoiceBox" layoutX="80.0" layoutY="26.0" prefHeight="25.0" prefWidth="541.0" />
    </children>
 </AnchorPane>
