--- a/src/com/project/view/MainWindow.fxml
+++ b/src/com/project/view/MainWindow.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane prefHeight="462.0" prefWidth="672.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="477.0" prefWidth="808.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <MenuBar layoutY="1.0" prefHeight="43.0" prefWidth="671.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0">
+      <MenuBar prefHeight="43.0" prefWidth="808.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
@@ -33,16 +33,16 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TreeView fx:id="emailsTreeView" layoutY="43.0" prefHeight="418.0" prefWidth="158.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="43.0" />
-      <TableView fx:id="emailsTableView" layoutX="158.0" layoutY="43.0" prefHeight="185.0" prefWidth="514.0" AnchorPane.leftAnchor="158.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="43.0">
+      <TreeView fx:id="emailsTreeView" layoutY="43.0" prefHeight="432.0" prefWidth="250.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="43.0" />
+      <TableView fx:id="emailsTableView" layoutX="249.0" layoutY="43.0" prefHeight="180.0" prefWidth="559.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="43.0">
         <columns>
-          <TableColumn fx:id="senderCol" prefWidth="75.0" text="Sender" />
-          <TableColumn fx:id="subjectCol" prefWidth="147.99998474121094" text="Subject" />
-            <TableColumn fx:id="recipientCol" prefWidth="142.0" text="Recipient" />
-            <TableColumn fx:id="sizeCol" prefWidth="80.00003051757812" text="Size" />
-            <TableColumn fx:id="dateCol" prefWidth="84.66668701171875" text="Date" />
+          <TableColumn fx:id="senderCol" prefWidth="115.33326721191406" text="Sender" />
+          <TableColumn fx:id="subjectCol" prefWidth="138.66668701171875" text="Subject" />
+            <TableColumn fx:id="recipientCol" prefWidth="105.33334350585938" text="Recipient" />
+            <TableColumn fx:id="sizeCol" minWidth="0.0" prefWidth="66.66668701171875" text="Size" />
+            <TableColumn fx:id="dateCol" prefWidth="129.6666259765625" text="Date" />
         </columns>
       </TableView>
-      <WebView fx:id="emailWebView" layoutX="158.0" layoutY="229.0" prefHeight="231.0" prefWidth="514.0" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="158.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="229.0" />
+      <WebView fx:id="emailWebView" layoutX="249.0" layoutY="223.0" prefHeight="250.0" prefWidth="510.0" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="223.0" />
    </children>
 </AnchorPane>
